--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: arial;
     font-size: 15px;
     line-height: 1.6cm;
-    background: #d6a4a4;
+    background: #e4e1e1da;
 }
 
 li {
